Padding issue on mobile has been resolved

--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,9 @@ html {
 }
 
 body {
-  padding: 2rem;
+/*  padding: 2rem;*/
+    padding-right: 30px;
+    padding-left: 30px;
 }
 
 h5 {
